k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: projetwebacr.azurecr.io/auth-service:v2
          imagePullPolicy: Always
          name: auth
          resources: {}
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - image: projetwebacr.azurecr.io/users-service:v1
          imagePullPolicy: Always
          name: users
          resources: {}
          ports:
            - containerPort: 9002
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - image: projetwebacr.azurecr.io/posts-service:v1
          imagePullPolicy: Always
          name: posts
          resources: {}
          ports:
            - containerPort: 9001
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: app
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: app
spec:
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
  selector:
    app: users
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: app
spec:
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: posts
  type: ClusterIP
