k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://74.178.207.4.nip.io, http://74.178.207.4, https://74.178.207.4, http://localhost:3000, https://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
      more_set_headers "Access-Control-Allow-Methods: GET, PUT, POST, DELETE, PATCH, OPTIONS";
      more_set_headers "Access-Control-Allow-Headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
      more_set_headers "Access-Control-Allow-Credentials: true";
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_min_length 1000;
      gzip_proxied any;
      gzip_types text/plain application/json;
      
      # Add CSP headers to allow connections from the client
      add_header Content-Security-Policy "default-src 'self'; connect-src 'self' http://localhost:* https://localhost:* http://74.178.207.4 https://74.178.207.4 http://*.nip.io https://*.nip.io; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; font-src 'self'; frame-ancestors 'none';" always;
spec:
  tls:
  - hosts:
    - 74.178.207.4.nip.io
    secretName: api-tls-cert
  rules:
  - host: 74.178.207.4.nip.io
    http:
      paths:
      - path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 9000
      - path: /users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 9002
      - path: /posts/?(.*)
        pathType: Prefix
        backend:
          service:
            name: posts
            port:
              number: 9001
